Add div for button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
           <label for="details">What's up?</label>
           <textarea id="details" required></textarea>
         </div>
+        <div>
+          <button type="submit">Send message</button>
+          <textarea id="details" required></textarea>
+        </div>
       </form>
     </div>
   </section>
