Remove unnecessary attributes from closing tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="push">
           <label for="name">Name</label>
           <input id="name" name="name" required>
-        </div class="push">
+        </div>
 
         <div class="push">
           <label for="email">Your email</label>
